--- a/html/index.html
+++ b/html/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/global.css">
     <link rel="stylesheet" href="../css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Arimo:wght@600;700&family=Manrope:wght@400;700&family=Poppins:wght@700&family=Roboto:wght@400;700&display=swap" rel="stylesheet"> 
     <title>Rocket Blog</title>
 </head>
 <body>
