--- a/html/index.html
+++ b/html/index.html
@@ -12,6 +12,22 @@
     <title>Rocket Blog</title>
 </head>
 <body>
-    
+    <header id="main-header">
+        <div class="container">
+            <nav>
+                <img src="../images/logo.svg" alt="Logo">
+                <div id="navigation">
+                    <span>Home</span>
+                    <span>Sobre</span>
+                    <span>Categorias</span>
+                    <span>Contato</span>
+                </div>
+                <div id="input-search">
+                    <input type="text" placeholder="Buscar">
+                    <img src="../images/search.svg" alt="Buscar">
+                </div>
+            </nav>
+        </div>
+    </header>
 </body>
 </html>
