--- a/html/index.html
+++ b/html/index.html
@@ -27,6 +27,22 @@
                     <img src="../images/search.svg" alt="Buscar">
                 </div>
             </nav>
+            <section id="section-header">
+                <div class="content-section-header">
+                    <h1>
+                        Veja o guia definitivo para conquistar seus objetivos como DEV em 2022
+                    </h1>
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae saepe quo, nisi recusandae voluptates rerum corporis veritatis molestias impedit excepturi iusto quas iste repellat, repellendus corrupti placeat. Eius, corporis dicta.
+                    </p>
+                    <a href="#">
+                        Veja mais <img src="../images/arrow-right.svg" alt="Seta">
+                    </a>
+                </div>
+                <div class="featured-image">
+                    <img src="../images/featured-image.png" alt="Notebook com códigos">
+                </div>
+            </section>
         </div>
     </header>
 </body>
