--- a/html/index.html
+++ b/html/index.html
@@ -45,5 +45,43 @@
             </section>
         </div>
     </header>
+    <main id="main-content">
+        <div class="container">
+            <section class="entrance-post">
+                <div class="initial-post">
+                    <img src="../images/post-1.png" alt="Post Começando no ReactJS em 2022">
+                    <p>
+                        Janeiro 04, 2022
+                    </p>
+                    <h1>Começando no ReactJS em 2022</h1>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus veritatis aliquam necessitatibus qui enim? Nulla maiores quis, eveniet cupiditate soluta ad, repellendus nostrum minima eius alias vitae. Perspiciatis, corrupti sit?
+                    </p>
+                </div>
+                <div class="other-posts">
+                    <ul>
+                        <li>
+                            <p>
+                                Janeiro 04, 2022
+                            </p>
+                            <h1>Conheça as principais técnicas para conseguir uma vaga internacional em programação</h1>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt ea illo provident eius mollitia alias tempora possimus ratione! Alias amet vero animi iusto. Quam, ab aspernatur nesciunt odio sunt et.
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                Janeiro 04, 2022
+                            </p>
+                            <h1>Veja a evolução do Front-end na prática</h1>
+                            <p>
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium quidem molestias officiis, ea aut tempora perferendis illo odio a officia tenetur asperiores culpa perspiciatis numquam vel voluptates vitae! Dolore, soluta?
+                            </p>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+        </div>
+    </main>
 </body>
 </html>
