--- a/html/index.html
+++ b/html/index.html
@@ -81,6 +81,32 @@
                     </ul>
                 </div>
             </section>
+            <section class="other-posts">
+                <div>
+                    <img src="../images/post-2.png" alt="Post 10 dicas para conseguir a vaga desejada">
+                    <p>Janeiro 4, 2022</p>
+                    <h1>10 dicas para conseguir a vaga desejada</h1>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nibh nibh eu in aliquet ut adipiscing neque. Sed volutpat aenean sit vitae, sed tristique.
+                    </p>
+                </div>
+                <div>
+                    <img src="../images/post-3.png" alt="Post Deixe seu código mais semântico com essas dicas">
+                    <p>Janeiro 4, 2022</p>
+                    <h1>Deixe seu código mais semântico com essas dicas</h1>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nibh nibh eu in aliquet ut adipiscing neque. Sed volutpat aenean sit vitae, sed tristique.
+                    </p>
+                </div>
+                <div>
+                    <img src="../images/post-4.png" alt="Post Use essas dicas nas suas aplicações mobile">
+                    <p>Janeiro 4, 2022</p>
+                    <h1>Use essas dicas nas suas aplicações mobile</h1>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nibh nibh eu in aliquet ut adipiscing neque. Sed volutpat aenean sit vitae, sed tristique.
+                    </p>
+                </div>
+            </section>
         </div>
     </main>
 </body>
