--- a/html/index.html
+++ b/html/index.html
@@ -109,5 +109,10 @@
             </section>
         </div>
     </main>
+    <footer id="footer-content">
+        <div>
+            <h1>Feito por Juan Savedra<span>.</span></h1>
+        </div>
+    </footer>
 </body>
 </html>
